k8s/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    istio-injection: enabled
spec: {}
status: {}
