k8s/7-routes.yaml
# 1. Rota para a API Python (PyCRUD)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pycrud-api-route
  namespace: dev
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames:
  - "doug.lab.corp"
  rules:
  - matches:
    - path: { type: PathPrefix, value: /users }
    - path: { type: PathPrefix, value: /health }
    - path: { type: PathPrefix, value: /apidocs/ }
    - path: { type: PathPrefix, value: /flasgger_static/ }
    - path: { type: Exact, value: /apispec_1.json } # Convertido de ImplementationSpecific para Exact
    backendRefs:
    - name: pycrud
      port: 8080

---

# 2. Rota para o pgAdmin
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin-route
  namespace: dev
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames:
  - "postgres.lab.corp"
  rules:
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: pgadmin
      port: 8080
